--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
         android:layout_marginTop="50dp"
         android:layout_below="@id/instruction_label">
 
+        <!-- Row 1-->
         <TextView
             android:id="@+id/tv_floatview"
             android:layout_width="wrap_content"
@@ -63,7 +64,6 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
             android:textSize="20sp"
-            android:visibility="visible"
             />
 
         <CheckBox
@@ -75,8 +75,30 @@
             android:layout_marginStart="150dp"
             android:layout_marginEnd="5dp"
             android:layout_alignParentEnd="true"
-            android:checked="true"
-            android:visibility="visible"
+            android:checked="@bool/open_float_view"
+            />
+        <!-- Row 2-->
+        <TextView
+            android:id="@+id/tv_auto_open"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_floatview"
+            android:text="@string/label_auto_open_msg"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            />
+
+        <CheckBox
+            android:id="@+id/cb_auto_open"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_floatview"
+            android:layout_toRightOf="@id/tv_auto_open"
+            android:layout_alignTop="@id/tv_auto_open"
+            android:layout_marginEnd="5dp"
+            android:layout_alignStart="@id/cb_floatview"
+            android:checked="@bool/auto_open"
             />
     </RelativeLayout>
 </RelativeLayout>
