完成自动打开通知功能

--- a/src/main/res/values/package_list.xml
+++ b/src/main/res/values/package_list.xml
@@ -6,4 +6,9 @@
         <item>com.android.incallui</item>
         <item>android</item>
     </array>
+
+    <array name="auto_open_packages">
+        <item>com.tencent.mobileqq</item>
+        <item>com.tencent.mm</item>
+    </array>
 </resources>
