增加一个“任何界面打开通知消息”选项

--- a/src/main/res/values/bools.xml
+++ b/src/main/res/values/bools.xml
@@ -3,4 +3,5 @@
     <bool name="open_float_view">true</bool>
     <bool name="need_vibrator">false</bool>
     <bool name="auto_open">false</bool>
+    <bool name="auto_open_everywhere">false</bool>
 </resources>
