增加HOME键功能

--- a/src/main/res/values/bools.xml
+++ b/src/main/res/values/bools.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="open_float_view">true</bool>
+    <bool name="always_show_float_view">true</bool>
     <bool name="auto_open">false</bool>
     <bool name="auto_open_everywhere">false</bool>
     <bool name="click_vibrator">false</bool>
