--- a/src/main/res/xml/main.xml
+++ b/src/main/res/xml/main.xml
@@ -11,6 +11,11 @@
         android:defaultValue="@bool/open_float_view"/>
 
     <CheckBoxPreference
+        android:key="@string/key_always_show_float_view"
+        android:title="@string/label_always_show_float_view"
+        android:defaultValue="@bool/open_float_view"/>
+
+    <CheckBoxPreference
         android:key="@string/key_auto_open_msg"
         android:title="@string/label_auto_open_msg"
         android:summary="@string/label_auto_open_msg_summary"
