--- a/src/main/res/xml/main.xml
+++ b/src/main/res/xml/main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:key="root_screen">
     <Preference
         android:key="@string/key_active_listener"
         android:title="@string/enable_listener" />
