增加"智能打开应用“部分代码
功能没有完全开发完成

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
             android:layout_marginStart="150dp"
             android:layout_marginEnd="5dp"
             android:layout_alignParentEnd="true"
-            android:checked="@bool/open_float_view"
+            android:checked="@bool/default_open_float_view"
             />
         <!-- Row 2-->
         <TextView
@@ -98,7 +98,7 @@
             android:layout_alignTop="@id/tv_auto_open"
             android:layout_marginEnd="5dp"
             android:layout_alignStart="@id/cb_floatview"
-            android:checked="@bool/auto_open"
+            android:checked="@bool/default_auto_open"
             />
     </RelativeLayout>
 </RelativeLayout>
