增加“智能打开应用”控制开头

--- a/src/main/res/values/bools.xml
+++ b/src/main/res/values/bools.xml
@@ -7,4 +7,5 @@
     <bool name="default_click_vibrator">false</bool>
     <bool name="default_record_onging_msg">true</bool>
     <bool name="default_smart_open_msg">true</bool>
+    <bool name="default_display_often_open_icon">true</bool>
 </resources>
