--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:id="@+id/bt_listener"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="@string/enable_listener"
+        android:text="@string/label_enable_listener"
         android:background="@drawable/bt_background"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
